<resources>
    <string name="app_name">Dinosaurs</string>
    <string-array name="dino_list">
        <item>Gallimimus</item>
        <item>Parasaurolophus</item>
        <item>Pachycephalosaurus</item>
        <item>Spinosaurus</item>
        <item>Stegosaurus</item>
        <item>Tyrannosaurus Rex</item>
        <item>Triceratops</item>
        <item>Velociraptor</item>
    </string-array>
    <string name="name">Name:</string>
    <string name="diet">Diet:</string>
    <string name="weight">Weight(kg):</string>
    <string name="height">Height(m):</string>
    <string name="length">Length(m):</string>
    <string name="welcome">Hello Jurassic World!</string>
    <string name="btn_dino_list">List dinosaurs</string>
    <string name="btn_form">Add more dinosaurs</string>
    <string name="herbivore">Herbivore</string>
    <string name="carnivore">Carnivore</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_delete">Delete</string>
    <string name="lbl_register">Register dino</string>
    <string name="lbl_data">Data</string>
    <string name="lbl_list">Dino list</string>
    <string name="language_header">Language</string>
    <string name="selected_language">Selected language</string>
    <string name="lbl_settings">Settings</string>
    <string name="english">English</string>
    <string name="hungarian">Hungarian</string>
    <string name="options">Options</string>
    <string name="btn_dropDb">Drop database</string>
    <string name="btn_deleteAll">Delete all row</string>
    <string name="btn_addExamples">Add examples</string>
</resources>